--- a/scss/components/_comps.scss
+++ b/scss/components/_comps.scss
@@ -1082,20 +1082,29 @@
         position: absolute;
         z-index: -1;
         height: 100%;
-        width: calc(100% + 24px);
         transform-origin: 0% 50%;
         top: 0px;
         background: var(--csq-icon-bright);
         display: block;
 
-        &.consequence-resist-button-bg,
-        &.consequence-special-button-bg {
-          transform-origin: 100% 50%;
+        &.consequence-accept-button-bg {
+          width: calc(100% + 30px);
+          right: -7px;
+          transform: skewX(-45deg);
         }
 
+        &.consequence-resist-button-bg,
+        &.consequence-armor-button-bg,
         &.consequence-special-button-bg {
-          width: calc(100% + 40px);
-          margin-left: -10px;
+          width: calc(100% + 30px);
+          transform-origin: 100% 50%;
+          right: calc(-0.5 * var(--container-height));
+          transform: skewX(45deg);
+        }
+
+        &.consequence-armor-button-bg,
+        &.consequence-special-button-bg {
+          width: calc(100% + 35px);
         }
       }
 
@@ -1136,23 +1145,20 @@
 
       &.consequence-resist-button-container {
         right: 100%;
-
-        .consequence-button-bg {
-          left: -7px;
-          transform: skewX(45deg);
-        }
       }
       &.consequence-accept-button-container {
         left: 105%;
 
-        .consequence-button-bg {
-          right: -7px;
-          transform: skewX(-45deg);
-        }
+      }
+      &.consequence-armor-button-container {
+        right: 100%;
+        transform: translate(0%, 0%) !important;
+        top: 0%;
       }
       &.consequence-special-button-container {
         right: 100%;
-        bottom: 12px;
+        transform: translate(0%, -50%) !important;
+        top: 50%;
       }
     }
   }
