--- a/scss/sheets/_roll-collab-sheet.scss
+++ b/scss/sheets/_roll-collab-sheet.scss
@@ -872,6 +872,20 @@
             .sheet-main {
               right: 6px;
               flex-basis: auto;
+
+              &.roll-opp-block {
+
+              }
+
+              &.roll-consequences {
+                min-height: 330px;
+                h3 { margin-bottom: 10px; }
+              }
+
+              &.factor-controls {
+                min-height: 112px;
+                place-self: stretch flex-end;
+              }
             }
           }
         }
@@ -1444,8 +1458,8 @@
             z-index: 5;
 
             &.split-root-left {
-              flex-basis: 85%;
-              max-width: 85%;
+              flex-basis: 80%;
+              max-width: 80%;
               // max-width: 370px;
             }
 
