--- a/templates/actor-sheet.hbs
+++ b/templates/actor-sheet.hbs
@@ -246,8 +246,8 @@
               dataFlagTarget=false
               dataDType="String"
               dataDocType=false
-              selected=loadData.selLoadLevel
-              options=loadData.selectOptions }}
+              selected=loadData.selected
+              options=loadData.options }}
 
             <span class="load-selected-count shadowed">{{#if loadData.selLoadCount}}(Max
               <span>{{loadData.selLoadCount}}</span> Load){{/if}}</span>
