--- a/templates/roll/partials/roll-collab-action.hbs
+++ b/templates/roll/partials/roll-collab-action.hbs
@@ -42,6 +42,12 @@
   </div>
 </section>
 
+{{#if (test gamePhase "==" "Downtime")}}{{#if (test rollPrimary.rollPrimaryType "==" "pc")}}
+<section class="sheet-subheader flex-horizontal sheet-subheader-downtime">
+  {{gamePhase}}
+</section>
+{{/if}}{{/if}}
+
 <div class="split-root flex-horizontal">
   <div class="roll-sheet-float-block roll-source-bg-img">
     <img src="{{rollPrimary.rollPrimaryImg}}" />
@@ -242,9 +248,17 @@
     </section>
   </div>
   <div class="roll-sheet-float-block roll-opp-bg-img">
-    {{#if rollOpposition}}<img src="{{rollOpposition.rollOppImg}}" />{{/if}}
+    {{#if rollOpposition}}
+      {{#if (test rollOpposition.rollOppType "==" "clock")}}
+      {{> "systems/eunos-blades/templates/components/clock.hbs" rollOpposition.clockData}}
+      {{else}}
+      <img src="{{rollOpposition.rollOppImg}}" />
+      {{/if}}
+    {{/if}}
   </div>
+  {{#unless (test rollOpposition.rollOppType "==" "clock")}}
   <div class="roll-sheet-float-block roll-opp-bg-overlay">  </div>
+  {{/unless}}
   <div class="split-root-right">
     <section class="sheet-main tab-content roll-opp-block nav-group flex-vertical">
       {{> "systems/eunos-blades/templates/components/roll-collab-opposition.hbs" rollOpposition=rollOpposition factorData=rollFactors.opposition}}
