Continuing Downtime Action work

--- a/templates/actor-sheet.hbs
+++ b/templates/actor-sheet.hbs
@@ -154,7 +154,7 @@
             <td class="harm-effect">{{{system.harm.severe.effect}}}</td>
             <td class="healing-clock clock-container" rowspan="3">
               {{#if preparedItems.playbook}}
-              {{> "systems/eunos-blades/templates/components/clock.hbs" healing_clock }}
+              {{> "systems/eunos-blades/templates/components/clock.hbs" healing_clock.system }}
               {{/if}}
             </td>
             <td class="armor-uses" rowspan="3">
