--- a/templates/faction-sheet.hbs
+++ b/templates/faction-sheet.hbs
@@ -89,7 +89,7 @@
         {{#each system.clocks}}
         <div class="clock-row">
           <div class="clock-container">
-            {{> "systems/eunos-blades/templates/components/clock.hbs" }}
+            {{> "systems/eunos-blades/templates/components/clock.hbs" system }}
           </div>
           <div class="flex-vertical full-width">
               <div class="flex-horizontal full-width">
