--- a/scss/chat/_chat.scss
+++ b/scss/chat/_chat.scss
@@ -12,9 +12,7 @@
     width: 125%;
     margin-left: -25%;
     padding-left: 25%;
-
   }
-
 
   .flexrow.jump-to-bottom {
     bottom: 25px;
@@ -32,7 +30,7 @@
 .chat-message:not(.display-ok) { opacity: 0 !important; }
 
 .chat-message[class*=-roll] {
-  --font-primary: Beaufort !important;
+  // --font-primary: Beaufort, serif !important;
 
   --chat-header-height: 15px;
   --chat-vertical-gap: 15px;
@@ -58,77 +56,6 @@
   background: transparent;
   border: 2px ouset var(--blades-white);
 
-
-
-  &:not(.unresolved-action-roll) {
-    .blades-roll > *:not(.chat-message-speaker-portrait-wrapper) {
-      filter: sepia(1) grayscale(0.5) brightness(0.6);
-    }
-    .trait-label.trait-verb { display: none; }
-    .consequence-icon-container {
-      .consequence-icon-circle.base-consequence {
-        animation: none !important;
-        img { animation: none !important; }
-      }
-    }
-    .chat-message-speaker-portrait-wrapper {
-      $border-color-bright: #9b9b9b; // #aa5a29;
-      $border-color-med: #565656; // #5a2f17;
-      $border-color-dark: #383838; // #531c06;
-      $border-color-darkest: #232323; // #3b1201; // 46381f 6b5630 9e7f46
-
-      --border-gradient: linear-gradient(-72deg,
-        #{$border-color-med},
-        #{$border-color-bright} 16%,
-        #{$border-color-med} 21%,
-        #{$border-color-bright} 24%,
-        #{$border-color-dark} 27%,
-        #{$border-color-med} 36%,
-        #{$border-color-bright} 45%,
-        #{$border-color-bright} 60%,
-        #{$border-color-med} 72%,
-        #{$border-color-bright} 80%,
-        #{$border-color-med} 84%,
-        #{$border-color-darkest});
-
-      transform-origin: 50% 0%;
-      scale: 0.6 0.75;
-    }
-  }
-}
-
-.chat-message[class*=-roll].unresolved-action-roll {
-  --bg-controlled: url("../assets/animations/chat/roll-position-controlled.webp");
-  --bg-risky: url("../assets/animations/chat/roll-position-risky.webp");
-  --bg-desperate: url("../assets/animations/chat/roll-position-desperate.webp");
-
-  // --bg-critical: transparent;
-  // --bg-success: transparent;
-  // --bg-partial: transparent;
-  --bg-fail: url("../assets/animations/chat/fail-bg.webp");
-
-  --dice-strip-bg: url("../assets/animations/chat/lightning-ray.webp") no-repeat center / 100% auto;
-
-  --top-die-animation: die-pulse 5s ease infinite;
-  --ghost-die-animation: die-ghost 4s ease infinite;
-  --ghost-die-filter: sepia(1) saturate(2) hue-rotate(319deg);
-
-  margin-bottom: 0px;
-  opacity: 1;
-  filter: drop-shadow(5px 5px 5px black);
-  background: transparent;
-  outline: none;
-
-  .trait-label.trait-past-verb { display: none; }
-  .message-content {
-    .blades-roll {
-      .dice-roll-strip { margin-top: 5px; }
-    }
-  }
-}
-
-
-.chat-message[class*=-roll] {
   // background: transparent;
   overflow: visible;
   // border: none;
@@ -243,31 +170,11 @@
     }
   }
 
-
-  &.resistance-roll {
-    margin: 0;
-    .message-header { display: none; }
-  }
-  &.action-roll + .chat-message.resistance-roll {
-    margin-top: calc(-1 * var(--chat-vertical-gap));
-  }
-  &.action-roll.unresolved-action-roll + .chat-message.resistance-roll {
-    margin-top: 0;
-  }
-
   .message-content {
 
     .blades-roll {
       position: relative;
       z-index: 2;
-
-      &.roll-position-risky {
-          .chat-header,
-          .consequence-container {
-            background: var(--bg-risky);
-            background-size: cover;
-          }
-        }
 
       .chat-message-bg {
         position: absolute;
@@ -307,7 +214,7 @@
         width: 100%;
 
         .trait-label {
-          font-family: Beaufort;
+          font-family: var(--font-primary);
 
           &.trait-verb {
             padding-left: 70px;
@@ -325,19 +232,21 @@
             color: var(--blades-grey-bright);
             font-size: 28px;
             line-height: 38px;
-            text-transform: capitalize;
             font-style: italic;
-            text-transform: uppercase;
+            // text-transform: uppercase;
+            text-transform: capitalize;
+            font-variant: small-caps;
+            transform-origin: 0% 50%;
+            scale: 1.25 1;
           }
         }
-      }
 
-      h1.chat-header {
-        margin: 0;
-        padding: 0;
-        background: transparent;
-        box-shadow: none;
-
+        &h1 {
+          margin: 0;
+          padding: 0;
+          background: transparent;
+          box-shadow: none;
+        }
       }
 
       .dice-roll-strip {
@@ -705,236 +614,247 @@
         z-index: -3;
         position: relative;
       }
-
-
-
-      &.roll-type-resistance {
-        width: calc(100% - var(--resistance-right-shift));
-        left: var(--resistance-right-shift);
-        top: 0;
-
-        .chat-message-bg {
-          display: block;
-          background: var(--blades-grey);
-          top: 0; // calc(-1 * (var(--chat-header-height) + var(--chat-vertical-gap)));
-          height: 100%; // calc(100% + var(--chat-header-height) + var(--chat-vertical-gap));
-          left: -15px;
-          border-top-left-radius: 16px;
-          border-bottom-left-radius: 16px;
-          width: calc(100% + var(--resistance-right-shift));
-        }
-
-        .resistance-roll-one-line {
-          position: relative;
-          justify-content: stretch;
-
-          .resistance-roll-intro {
-            color: var(--blades-gold-bright);
-            // transform: translate(-50%, -50%);
-            // top: 50%;
-            z-index: 3;
-            left: calc(-1 * var(--resistance-right-shift));
-            position: absolute;
-            rotate: -45deg;
-            transform-origin: 50% 50%;
-            transform: translate(0%, 0%);
-            left: calc(-1 * var(--resistance-right-shift) - 0px);
-            left: -19px;
-            text-transform: uppercase;
-            font-weight: bold;
-            font-size: 10px;
-            text-shadow: var(--text-shadow-dark-strong);
-            top: 7px;
-          }
-
-          .consequence-icon-img {
-            height: 32px;
-            border-radius: 16px;
-            background: var(--blades-black);
-            position: absolute;
-            // left: calc(-1 * var(--resistance-right-shift) + 10px);
-            left: -10px;
-          }
-
-          .resistance-roll-vertical-right {
-            align-items: space-evenly;
-
-            .resistance-roll-attr-dice {
-              height: 24px;
-              justify-content: flex-start;
-              align-items: center;
-              padding: 0 10px 0 30px;
-
-              .trait-intro {
-                display: none;
-                color: var(--blades-black);
-                margin-right: 5px;
-                line-height: 24px;
-                font-size: 10px;
-                font-weight: bold;
-                margin-top: 3px;
-                text-transform: uppercase;
-              }
-
-              .trait-label {
-                font-family: var(--font-emphasis);
-                color: var(--blades-gold-bright);
-                line-height: 24px;
-                // margin-top: 3px;
-                text-shadow: var(--text-shadow-emboss);
-
-              }
-
-              .dice-roll-strip {
-                height: 24px;
-                width: fit-content;
-                padding: 4px 0px;
-                gap: 3px;
-                margin: 0 0 0 5px;
-                background: transparent;
-                box-shadow: none;
-
-
-                .blades-die {
-                  height: 16px;
-                  border-radius: 3px;
-                  // scale: 1;
-                  // filter: none;
-                  // box-shadow: none;
-                  // outline: none;
-                  // border: none;
-                  // background: transparent;
-
-                  img { height: 16px; width: 16px; filter: none; }
-
-                  &:not(.blades-die-resistance) {
-                    opacity: 0.5;
-                    filter: blur(1px);
-                  }
-                }
-
-                .blades-die + .blades-die + .blades-die + .blades-die + .blades-die ~ .blades-die:last-child {
-                  margin-right: -50px;
-                }
-              }
-            }
-
-            .resistance-cost-row {
-              h3 {
-                font-size: 12px;
-                text-shadow: var(--text-shadow-dark-strong);
-              }
-
-              &.cost-bonus {
-                h3 {
-                  color: var(--blades-gold-bright);
-                }
-              }
-              &.cost-stress {
-                h3 {
-                  color: var(--blades-red-bright);
-                }
-              }
-            }
-          }
-        }
-
-        .chat-header.roll-trait {
-          font-size: 14px;
-          color: var(--blades-black);
-
-        }
-
-        .consequence-container.consequence-original {
-
-          .comp.consequence-display-container {
-
-            .consequence-icon-container {
-
-            }
-
-            .consequence-type-container { display: none }
-            .consequence-name-container { display: none }
-
-          }
-
-        }
-        .consequence-container.consequence-resisted { display: none }
-
-
-      }
     }
-
-    // .chat-label, .chat-trait-label {
-    //   background-color: var(--blades-grey-bright);
-    //   font-family: var(--font-emphasis);
-    //   color: var(--blades-white);
-    //   font-size: 21px;
-    //   text-align: center;
-    //   padding: 0px 5px;
-    //   height: 30px;
-    //   text-transform: capitalize;
-    // }
-    // .chat-label-small {
-    //   background-color: var(--blades-grey);
-    //   color: var(--blades-black);
-    //   font-size: small;
-    //   text-align: center;
-    //   padding: 3px 5px;
-    //   height: 20px;
-    // }
-
-    // .label-stripe-chat {
-    //   text-transform: uppercase;
-    //   background-color: var(--blades-black);
-    //   color: var(--blades-white);
-    //   position: relative;
-    //   padding-top: 3px;
-    //   display: flex;
-    //   font-weight: bold;
-    //   margin: 0;
-    // }
-
-    // .label-stripe-chat-small {
-    //   text-transform: capitalize;
-    //   background-color: var(--blades-grey);
-    //   color: var(--blades-black);
-    //   margin-bottom: 10px;
-    //   position: relative;
-    //   padding-top: 3px;
-    //   display: flex;
-    //   font-weight: bold;
-    // }
-
-
-    // .blades-die-tooltip {
-    //   .die {
-    //     font-weight: bold;
-    //     text-transform: capitalize;
-    //     font-size: large;
-
-    //     &.critical-success {
-    //       color: var(--blades-color-positive);
-    //     }
-
-    //     &.success {
-    //       color: var(--blades-white-bright);
-    //     }
-
-    //     &.partial-success {
-    //       color: var(--blades-grey-bright);
-    //     }
-
-    //     &.failure {
-    //       color: var(--blades-color-negative);
-    //     }
-    //   }
-    // }
-
-
   }
 
   .message-content ~ * {
     z-index: 3;
   }
+
+  &:not(.unresolved-action-roll) .message-content .blades-roll {
+
+    .trait-label.trait-verb { display: none; }
+
+    .consequence-icon-container {
+      .consequence-icon-circle.base-consequence {
+        animation: none !important;
+        img { animation: none !important; }
+      }
+    }
+
+    .blades-roll > *:not(.chat-message-speaker-portrait-wrapper) {
+      filter: sepia(1) grayscale(0.5) brightness(0.6);
+    }
+
+    .chat-message-speaker-portrait-wrapper {
+      $border-color-bright: #9b9b9b; // #aa5a29;
+      $border-color-med: #565656; // #5a2f17;
+      $border-color-dark: #383838; // #531c06;
+      $border-color-darkest: #232323; // #3b1201; // 46381f 6b5630 9e7f46
+
+      --border-gradient: linear-gradient(-72deg,
+        #{$border-color-med},
+        #{$border-color-bright} 16%,
+        #{$border-color-med} 21%,
+        #{$border-color-bright} 24%,
+        #{$border-color-dark} 27%,
+        #{$border-color-med} 36%,
+        #{$border-color-bright} 45%,
+        #{$border-color-bright} 60%,
+        #{$border-color-med} 72%,
+        #{$border-color-bright} 80%,
+        #{$border-color-med} 84%,
+        #{$border-color-darkest});
+
+      transform-origin: 50% 0%;
+      scale: 0.6 0.75;
+    }
+  }
+
+  &.roll-position-risky .msg-content .blades-roll {
+    .chat-header,
+    .consequence-container {
+      background: var(--bg-risky);
+      background-size: cover;
+    }
+  }
+
+  &.unresolved-action-roll .msg-content .blades-roll {
+    --bg-controlled: url("../assets/animations/chat/roll-position-controlled.webp");
+    --bg-risky: url("../assets/animations/chat/roll-position-risky.webp");
+    --bg-desperate: url("../assets/animations/chat/roll-position-desperate.webp");
+
+    // --bg-critical: transparent;
+    // --bg-success: transparent;
+    // --bg-partial: transparent;
+    --bg-fail: url("../assets/animations/chat/fail-bg.webp");
+
+    --dice-strip-bg: url("../assets/animations/chat/lightning-ray.webp") no-repeat center / 100% auto;
+
+    --top-die-animation: die-pulse 5s ease infinite;
+    --ghost-die-animation: die-ghost 4s ease infinite;
+    --ghost-die-filter: sepia(1) saturate(2) hue-rotate(319deg);
+
+    margin-bottom: 0px;
+    opacity: 1;
+    filter: drop-shadow(5px 5px 5px black);
+    background: transparent;
+    outline: none;
+
+    .trait-label.trait-past-verb { display: none; }
+
+    .dice-roll-strip { margin-top: 5px; }
+  }
+
+  &.roll-type-resistance .msg-content .blades-roll {
+    width: calc(100% - var(--resistance-right-shift));
+    left: var(--resistance-right-shift);
+    top: 0;
+
+    .chat-message-bg {
+      display: block;
+      background: var(--blades-grey);
+      top: 0; // calc(-1 * (var(--chat-header-height) + var(--chat-vertical-gap)));
+      height: 100%; // calc(100% + var(--chat-header-height) + var(--chat-vertical-gap));
+      left: -15px;
+      border-top-left-radius: 16px;
+      border-bottom-left-radius: 16px;
+      width: calc(100% + var(--resistance-right-shift));
+    }
+
+    .resistance-roll-one-line {
+      position: relative;
+      justify-content: stretch;
+
+      .resistance-roll-intro {
+        color: var(--blades-gold-bright);
+        // transform: translate(-50%, -50%);
+        // top: 50%;
+        z-index: 3;
+        // left: calc(-1 * var(--resistance-right-shift));
+        position: absolute;
+        rotate: -45deg;
+        transform-origin: 50% 50%;
+        transform: translate(0%, 0%);
+        left: calc(-1 * var(--resistance-right-shift) - 0px);
+        // left: -19px;
+        text-transform: uppercase;
+        font-weight: bold;
+        font-size: 10px;
+        text-shadow: var(--text-shadow-dark-strong);
+        top: 7px;
+      }
+
+      .consequence-icon-img {
+        height: 32px;
+        border-radius: 16px;
+        background: var(--blades-black);
+        position: absolute;
+        // left: calc(-1 * var(--resistance-right-shift) + 10px);
+        left: -10px;
+      }
+
+      .resistance-roll-vertical-right {
+        align-items: space-evenly;
+
+        .resistance-roll-attr-dice {
+          height: 24px;
+          justify-content: flex-start;
+          align-items: center;
+          padding: 0 10px 0 30px;
+
+          .trait-intro {
+            display: none;
+            color: var(--blades-black);
+            margin-right: 5px;
+            line-height: 24px;
+            font-size: 10px;
+            font-weight: bold;
+            margin-top: 3px;
+            text-transform: uppercase;
+          }
+
+          .trait-label {
+            font-family: var(--font-emphasis);
+            color: var(--blades-gold-bright);
+            line-height: 24px;
+            // margin-top: 3px;
+            text-shadow: var(--text-shadow-emboss);
+
+          }
+
+          .dice-roll-strip {
+            height: 24px;
+            width: fit-content;
+            padding: 4px 0px;
+            gap: 3px;
+            margin: 0 0 0 5px;
+            background: transparent;
+            box-shadow: none;
+
+
+            .blades-die {
+              height: 16px;
+              border-radius: 3px;
+              // scale: 1;
+              // filter: none;
+              // box-shadow: none;
+              // outline: none;
+              // border: none;
+              // background: transparent;
+
+              img { height: 16px; width: 16px; filter: none; }
+
+              &:not(.blades-die-resistance) {
+                opacity: 0.5;
+                filter: blur(1px);
+              }
+            }
+
+            .blades-die + .blades-die + .blades-die + .blades-die + .blades-die ~ .blades-die:last-child {
+              margin-right: -50px;
+            }
+          }
+        }
+
+        .resistance-cost-row {
+          h3 {
+            font-size: 12px;
+            text-shadow: var(--text-shadow-dark-strong);
+          }
+
+          &.cost-bonus {
+            h3 {
+              color: var(--blades-gold-bright);
+            }
+          }
+          &.cost-stress {
+            h3 {
+              color: var(--blades-red-bright);
+            }
+          }
+        }
+      }
+    }
+
+    .chat-header.roll-trait {
+      font-size: 14px;
+      color: var(--blades-black);
+
+    }
+
+    .consequence-container.consequence-original {
+
+      .comp.consequence-display-container {
+
+        .consequence-type-container { display: none }
+        .consequence-name-container { display: none }
+
+      }
+
+    }
+    .consequence-container.consequence-resisted { display: none }
+  }
+
+  &.resistance-roll {
+    margin: 0;
+    .message-header { display: none; }
+  }
+  &.action-roll + .chat-message.resistance-roll {
+    margin-top: calc(-1 * var(--chat-vertical-gap));
+  }
+  &.action-roll.unresolved-action-roll + .chat-message.resistance-roll {
+    margin-top: 0;
+  }
+
 }
