--- a/templates/components/consequence-accepted.hbs
+++ b/templates/components/consequence-accepted.hbs
@@ -1,4 +1,5 @@
-<div class="comp consequence-display-container full-width consequence-accepted" />
+{{eLog "Consequence-Accepted Context" this}}
+<div class="comp consequence-display-container full-width consequence-accepted {{~#if blockClass}} {{blockClass}}{{/if}}"/>
 
   <div class="consequence-icon-container">
     <div class="consequence-icon-circle base-consequence">
